--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
 
 		<div id="container" class="hidden" >
 			<div id="head">
-				<h2 class="h1">Logs</h2>
+				<h2 class="logs_head">Logs</h2>
 			</div>			
 				
 			<div id="logs"></div>
