Fixed parcel build

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 		</script>
 		
 
-		<div id="container" class="hidden" >
+		<div id="container" class="hidden" > <!-- hidden-->
 			<div id="head">
 				<h2 class="logs_head">Logs</h2>
 			</div>			
