Added grid-template-column change and cleaned css js and html files

--- a/src/parallax.html
+++ b/src/parallax.html
@@ -14,6 +14,8 @@
       <a href="#about">About</a>
       <a href="#contact">Contact</a>
     </nav>
+    <script type="module" src="index.js"></script>
+    
   </header>
 
   <!-- decorative parallax layers (fixed) -->
@@ -48,7 +50,6 @@
 
     <section id="work">
       <div class="wrap work-wrap" >
-
         <div class="left-column">
           <div class="section-header">
             <h2 class="reveal">Selected work</h2> 
@@ -88,7 +89,7 @@
 
           <aside class="card reveal">
             <strong>Manifold Embedded Functional Connectivity</strong>
-            <p style="margin-top:8px;color:rgba(230,238,248,0.7)">Paper: <em>Soon</em></p>
+            <p style="margin-top:8px;color:rgba(230,238,248,0.7)">Paper: <em>TBD</em></p>
           </aside>
         </div> 
       </div>
@@ -137,7 +138,7 @@
 
   <div class="progress" aria-hidden="true"><i></i></div>
 
-  <script type="module" src="index.js"></script>
+  
 
 </body>
 </html>
