--- a/src/nre.html
+++ b/src/nre.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Network Risk Estimation Demo</title>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="nre-style.css">
 			
 	</head>
 	
