--- a/src/parallax.html
+++ b/src/parallax.html
@@ -58,20 +58,30 @@
 
           <div id="work-cards">
             <article class="card work reveal expandable">
-              <div>
-                <strong>Network Risk Estimation</strong>
-                <p style="margin-top:8px;color:rgba(230,238,248,0.7)">Inferring cyber network risks in real-time </p>
+              <div class="card-header">
+                <div class="card-text">
+                  <strong>Network Risk Estimation</strong>
+                  <p>Inferring cyber network risks in real-time</p>
+                </div>
+                <div class="card-icon"> 
+                  <img src="nre-icon.png" alt="NRE">
+                </div>
               </div>
-              <div style="opacity:.9"> - icon -</div>
-              <div class="more-details">Detailed explanation of the project, methods used, contributions, results, and links.</div>
+              <div class="more-details">
+                Detailed explanation of the project, methods used, contributions, results, and links.
+                
+              
+              </div>
             </article>
 
             <article class="card work reveal">
-              <div>
-                <strong>Urological Brain Computer Interface</strong>
-                <p style="color:rgba(230,238,248,0.7);font-size:.95rem">Decoding supraspinal control of Lower Urinary Tract</p>
+              <div class="card-header">
+                <div class="card-text">
+                  <strong>Urological Brain Computer Interface</strong>
+                  <p>Decoding supraspinal control of Lower Urinary Tract</p>
+                </div>
+                <div class="card-icon">- icon -</div>
               </div>
-              <div style="opacity:.9">- icon -</div>
             </article>
           </div>
         </div>  
@@ -132,7 +142,7 @@
     </section>
 
     <footer>
-      © <span id="year"></span> Arda Bayer · Built with simplicity in mind
+      © <span id="year"></span> Arda Bayer
     </footer>
   </main>
 
